Bug 314825 - KNotes opens an empty note on startup
Summary: KNotes opens an empty note on startup
Status: RESOLVED FIXED
Alias: None
Product: knotes
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 4.10.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-10 12:54 UTC by Horst Gerbig
Modified: 2013-10-29 06:26 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Horst Gerbig 2013-02-10 12:54:00 UTC
An old bug, actually; I found reports from 2006/2007, but apparently nothing recent.
On my Ubuntu 12.10, KNotes opens an empty note on startup. The startup commande is "/usr/bin/knotes". On my other machine running Ubuntu 12.04, the startup command is the same, but the application just starts without opening a new note and sits up top next to the watch.

Reproducible: Always
Comment 1 Myriam Schweingruber 2013-02-16 12:17:37 UTC
Confirmed, and this is a highly annoying "feature", I don't want to get cluttered with new empty notes on every start up. Please remove this, it is not really useful.
Comment 2 Horst Gerbig 2013-02-16 20:02:42 UTC
The problem has suddenly vanished, no explanation. I did not even try and do something about it (wouldn't be able to anyway, no IT background). Strange ...
Comment 3 Myriam Schweingruber 2013-02-16 23:52:24 UTC
I can reproduce this on every new start of KDE, Knotes is started automatically as it is in the autostart list, KDE 4.10.0, Kubuntu 12.10
Comment 4 Horst Gerbig 2013-02-27 17:34:03 UTC
... and here we go again. I created a new note yesterday which I deleted again later, and when I started up the machine today, knotes created an empty note again.
Comment 5 Myriam Schweingruber 2013-02-27 17:36:12 UTC
(In reply to comment #4)
> ... and here we go again. I created a new note yesterday which I deleted
> again later, and when I started up the machine today, knotes created an
> empty note again.

Why does this surprise you? AFAIK you didn't change your version, and I haven't seen any commits in that direction.
It is reproducible in a very reliable way: on every knotes start after a KDE restart I get a new empty note.
Comment 6 Horst Gerbig 2013-07-16 07:46:34 UTC
Still happens on 13.04. There seems to be a workaround: rather than deleting all empty notes created by KNotes, keep one of them and hide it. Once it has a note to take care of, KNotes seems to be happy and calm down.
Comment 7 Laurent Montel 2013-10-29 06:26:09 UTC
Git commit 312e4da0a813a8879031ff54c7fb1aad85371c45 by Montel Laurent.
Committed on 29/10/2013 at 06:25.
Pushed by mlaurent into branch 'master'.

Fix Bug 314825 - KNotes opens an empty note on startup

FIXED-IN: 4.12

M  +3    -0    knotes/knotesapp.cpp

http://commits.kde.org/kdepim/312e4da0a813a8879031ff54c7fb1aad85371c45