Fix Bug 314825 - KNotes opens an empty note on startup

FIXED-IN: 4.12
BUG: 314825